# gps_server

./: .gitlab-ci.yml  GpsServer.kdev4  README.md  server_iptables_rules  update.sql
Acceptor/: Acceptor.kdev4  CMakeLists.txt  main.cpp  reset_kdev_paths.sh
Acceptor/.kdev4/: Acceptor.kdev4
Acceptor/Data_modal/: DataTypes.h  ErrorCodes.h  Globals.hpp
Acceptor/Modules/: Authorization.cpp  Authorization.h  DataStorage.cpp  DataStorage.h
Acceptor/Parser/: Parser.hpp
Acceptor/Parser/Teltonica/: Teltonica.cpp  Teltonica.h  testTeltonica.cpp
Acceptor/Parser/WialonIPS/: WialonIPS.cpp  WialonIPS.h
Acceptor/Parser/WialonIPS/PackageType/: BlackBoxParser.cpp  BlackBoxParser.h  DataParser.cpp  DataParser.h  LoginParser.cpp  LoginParser.h  PingParser.cpp  PingParser.h
Acceptor/SQL/: PSQLHandler.cpp  PSQLHandler.h
Acceptor/Server/: Connection.cpp  Connection.h  IOServicePool.cpp  Server.cpp  Server.h
Acceptor/Utils/: Logger.hpp  utils.hpp
Responder/: CMakeLists.txt  Responder.kdev4  main.cpp
Responder/.kdev4/: Responder.kdev4
Responder/Modules/: Authorization.cpp  Authorization.h  DataStorage.cpp  DataStorage.h
Responder/Parser/: Parser.hpp
Responder/Parser/HTTP/: HttpParser.cpp  HttpParser.h  Reply.cpp  Reply.h  UriParser.cpp  UriParser.h
Responder/SQL/: PSQLHandler.cpp  PSQLHandler.h
Responder/Server/: Connection.cpp  Connection.h  IOServicePool.h  Server.cpp  Server.h
Responder/Utils/: utils.hpp
Responder/common/: DataTypes.h
Responder/common/rapidjson/: document.h  stringwriter.h
misc/: GpsServer.SQL  class diagram.xmi
tools/AccountRegistrator/: CMakeLists.txt  main.cpp
tools/DeviceRegistrator/: CMakeLists.txt  main.cpp
tools/TrackVis/: gpsdata.js  index.html
tools/TrackVis/resources/css/: TrackVis.css  leaflet.css  w2ui-1.2.css
tools/TrackVis/resources/js/: TrackVis.js  leaflet.js  utils.js  w2ui-1.2.js
tools/WialonIPSEmulator/WialonIPSEmulator/: AboutBox.Designer.cs  AboutBox.cs  AboutBox.resources  DeviceInfo.cs  DevicesConfigForm.Designer.cs  DevicesConfigForm.cs  DevicesConfigForm.resources  HasK.Data.cs  HasK.Net.cs  IOPanel.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  ServersConfigForm.Designer.cs  ServersConfigForm.cs  SettingsForm.Designer.cs  SettingsForm.cs  WialonIPS.cs
tools/WialonIPSEmulator/WialonIPSEmulator/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
tools/cryptPassword/: CMakeLists.txt  main.cpp
